...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnsignup"
                                android:text="sign up"
                                android:textSize="20dp"
                                android:padding="10dp"
                                app:backgroundTint="#f06616"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
