...
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9.5" />

            <Button
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:background="#F30101"
                android:padding="@dimen/_5sdp"
...
